# tutorsite

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile  git-access.sh
.sqlx/: query-195b123805844f83fdc475425c8144fdd12e701b5b66901033f8ae20da8f6e41.json  query-42f018daa151d57c4eac5bc37125d17fb2beba9d994f282d6d08ece1e3b2b7ae.json  query-43e1ac028784de0636a2113e7e08a18a238aa810a0ff09bc9602ff8dbc447606.json  query-4b07027a8ea8e00224fcfc2cfd0697c37b558524d64f10799b4eae7670c7ae76.json  query-6a7651121c9c1e54b951696de4831da442307519d672f23fb1fe5f6e0c64350d.json  query-71374f321a441e889f83b33a3b47b2d516977d84d8ac11dba8242eed640176a8.json  query-7ba67551ef82c4af90110d5fbfd49132600245befe909ddc9d4363c0ef29a876.json  query-9e1cf23f159ab716ba9f432fbbc693c19ed001f5ae34fc4a83a4d00c6ee867c7.json  query-ab1a0fac85eb494964c6159966ff7076e99243b05bc5365816cbd2daaef6acaf.json  query-b2b81c9ddfe6c04242b827651a3c2f44fb2f37d035948ef680d4eead7f3689fa.json  query-bb404d0509e4c469aca998c347b4fe27c6634e3cfba1392ea023d6d7dbb2aaed.json  query-c154c76592cda8fb5c8f7575382e08dcde0e853014c3ddeda13bd4c3fbb71d99.json  query-c45df7d61a02134de5fcc035e85512486af79deacb02ad9756a04164324608c7.json  query-e2178673817cb10b47c4fee08e3ac8bc5b14d4ecf6da82b08a115a37d72af91b.json  query-e5975e34216afc9ba12a82e4b91d31200219789c135c0c7d4fb811d31d03b751.json  query-e964a1a06735f91a8d2b6b08e66cb5c69bd8bbd681a466ed02bcc21fec6eaceb.json  query-f084b3d50765ef7b1eecdceb1f12d31b1f1199acc7cd8111e44817d639f0060c.json
database/: dump.sql
sql/: backup.sql
src/: config.rs  context.rs  main.rs
(+62 files in other folders)
