[package]
name = "tutors"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web="4"
chrono = { version = "0.4.38", features = ["serde"] }
#derive_more = "1.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
figment = { version = "0.10.19", features = ["env"] }
handlebars = { version = "6.0.0", features = ["dir_source"] }
log = "0.4.22"
markdown = "1.0.0-alpha.20"
regex = "1.10.6"
serde = { version = "1.0.206", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.122"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
derive_more = { version = "1.0.0", features = ["full"] }
actix-files = "0.6.6"
rand = "0.8.5"
rs_sha512 = "0.1.3"
actix-multipart = "0.7.2"
futures = "0.3.30"
git2 = { version = "0.19.0", features = ["ssh"] }
